# grafana-cm-generator

./: Dockerfile  Makefile  README.md  grafana_cm_generator.py  requirements_test.txt  setup.cfg
.github/workflows/: tests.yaml
example/infra/: grafana.yaml
