[metadata]
name = grafana-cm-generator
description = Generate grafana configmap for prometheus operator
long_description = file: README.md
author = Neovops
author_email = nicolas@neovops.io
url = https://github.com/neovops/grafana-cm-generator
license = BSD 3-Clause License

[options]
zip_safe = False
install_requires =
    fire>=0.3.1
    PyYAML>=5.3.1
    requests>=2.7.0

[options.entry_points]
console_scripts =
    grafana-cm-generator = grafana_cm_generator:main

[flake8]
max-line-length = 120
